makers not working on map, using wring coordinates to search for places

--- a/index.html
+++ b/index.html
@@ -46,6 +46,19 @@
             <option value="sushi">Sushi</option>
 
         </select>
+
+        <label for="searchradius">Select search radius (miles)</label>
+
+        <select name="radius" id="searchradius">
+            <option value="5">5</option>
+            <option value="10">10</option>
+            <option value="15">15</option>
+            <option value="20">20</option>
+            <option value="25">25</option>
+            <option value="30">30</option>
+        </select>
+
+        <button type="button" id="findrestaurant">Find a restaruant</button>
     </div>
     <!-- Added link to the jQuery Library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
